[package]
name = "libopenraw-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "2.1.0"
libopenraw = { path = ".." }
serde = { version = "^1, <=1.0.171", features = [ "derive" ] }
serde-xml-rs = "^0.5.1"
