[package]
name = "libopenraw-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.2.0"
getopts = "0.2.21"
libopenraw = { path = ".." }
quick-xml = { version = "0.37", features = [ "serialize" ] }
serde = { version = "^1", features = [ "derive" ] }
