[package]
name = "mp4parse-craw"
version = "0.12.0"
authors = [
  "Ralph Giles <giles@mozilla.com>",
  "Matthew Gregan <kinetik@flim.org>",
  "Alfredo Yang <ayang@mozilla.com>",
  "Jon Bauman <jbauman@mozilla.com>",
  "Bryce Seager van Dyk <bvandyk@mozilla.com>",
  "Hubert Figuière <hub@figuiere.net>",
]

description = "Parser for ISO base media file format (mp4) with CRAW support, a fork of mp4parse"
documentation = "https://docs.rs/mp4parse-craw/"
license = "MPL-2.0"
categories = ["multimedia::video", "multimedia::images"]

repository = "https://gitlab.freedesktop.org/libopenraw/libopenraw"

# Avoid complaints about trying to package test files.
exclude = [
  "*.mp4",
  "av1-avif/*"
]

[dependencies]
byteorder = "1.2.1"
bitreader = { version = "0.3.2" }
env_logger = "0.8"
fallible_collections = { version = "0.4", features = ["std_io"] }
num-traits = "0.2.14"
log = "0.4"
static_assertions = "1.1.0"

[dev-dependencies]
test-assembler = "0.1.2"
walkdir = "2.3.1"
criterion = "0.3"

[features]
default = ["craw"]
craw = []
missing-pixi-permitted = []
3gpp = []
meta-xml = []
unstable-api = []
mp4v = []

# See https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false
